--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ __pycache__/
 env/
 build/
 develop-eggs/
-dist/
+#dist/
 downloads/
 eggs/
 lib/
@@ -59,3 +59,4 @@ target/
 
 # comapss
 .sass-cache
+
