--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Flask==0.10.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==0.9.8
+Twisted==14.0.2
 Werkzeug==0.9.6
-argparse==1.2.1
 itsdangerous==0.24
 wsgiref==0.1.2
+zope.interface==4.1.1
